tests/neg/i15568.check
-- Error: tests/neg/i15568.scala:3:15 ----------------------------------------------------------------------------------
3 |type Bar = Foo[? >: Int <: String] // error
  |               ^
  |               type argument has unrealizable bounds  >: Int <: String
